--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ethereumjs-util": "^6.1.0",
     "ethereumjs-wallet": "^0.6.3",
     "express": "^4.15.2",
+    "moment": "^2.24.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "6.3.3",
     "rxjs-compat": "^6.4.0",
