--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bip39": "^2.5.0",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
+    "decimal.js": "^10.1.1",
     "ethereumjs-tx": "^1.3.7",
     "ethereumjs-util": "^6.1.0",
     "ethereumjs-wallet": "^0.6.3",
